fix: don't hide the keypad on hover on mobile

--- a/main.css
+++ b/main.css
@@ -47,20 +47,28 @@
     position: absolute;
     top: 2px;
     left: 2px;
-    opacity: 0; /*hide ... */
 }
 
-.keypad:hover {
+/* Only hides the keypad if we're not a touch device */
+.no-touch .keypad {
+    opacity: 0 /* hide... */
+}
+
+/* Checks for no_touch anywhere in the DOM tree */
+.no-touch .keypad:hover {
     opacity: 1; /* unless hovered */
 }
-
 
 
 .keypad_btn {
     /*background-color: transparent; */
     background-color: black;
-    opacity: 0.75;
+    opacity: 0.6;
     color: #42D6CA;
+}
+
+.no-touch .keypad_btn {
+    opacity: 0.85; /* almost completely opaque since we disappear when not hovered */
 }
 
 /* Styling for modal */
